# agentguard

./: .gitignore  README.md  pyproject.toml  test_agentguard.py  test_dangerous_tools.py  test_external_resolve.py  test_multiagent.py  test_readme_examples.py
agentguard/: __init__.py  core.py
