[project]
name = "agentguard-hitl"
version = "0.2.0"
description = "A permission gate for AI agent tool calls. Stops dangerous actions before they execute. Safe under many concurrent agents."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["ai", "agents", "llm", "safety", "guardrails", "tool-use"]

[project.urls]
Homepage = "https://github.com/agentguard/agentguard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentguard"]
